fixed the languages

--- a/src/i18n/es.json
+++ b/src/i18n/es.json
@@ -22,7 +22,7 @@
     "truthOrDare": "Verdad o Reto",
     "neverHaveIEver": "Yo Nunca Nunca",
     "bottleSpin": "Gira la Botella",
-    "wouldYouRather": "¿Qué Prefieres?"
+    "wouldYouRather": "¿Qué prefieres?"
   }
 }
 
