--- a/src/i18n/sv.json
+++ b/src/i18n/sv.json
@@ -3,7 +3,7 @@
   "playerSetupTitle": "Lägg till spelare",
   "enterPlayerName": "Ange spelarens namn",
   "addPlayer": "Lägg till",
-  "startGame": "Start",
+  "startGame": "Starta",
   "gamesTitle": "Välj ett spel",
   "categoriesTitle": "Välj en kategori",
   "premium": "Premium",
