Bypass category selection for single-category games; localize category titles; add category i18n keys

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -38,4 +38,16 @@
   "friendsParty": "Friends & Party",
   "selfGrowth": "Self Growth & Reflection",
   "familyGeneral": "Family & General"
+  ,
+  "family": "Family",
+  "friends": "Friends",
+  "party": "Party",
+  "daring": "Daring",
+  "action": "Action",
+  "drunk": "Drunk",
+  "sexual": "18+",
+  "classic": "Classic",
+  "funny": "Funny",
+  "hard": "Hard",
+  "general": "General"
 }
